<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/bookNameEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/book_name" />

    <EditText
        android:id="@+id/bookMetaEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:hint="@string/book_meta" />

    <EditText
        android:id="@+id/bookIsbnEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/book_isbn"
        android:inputType="number"
        />
    
    <EditText
        android:id="@+id/bookCodeEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/book_code" />

    <AutoCompleteTextView
        android:id="@+id/bookCategoryAutoTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Category" >

        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/statusTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
	<TextView
            android:id="@+id/bookLenderTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/lendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_lend" />

    </LinearLayout>

</LinearLayout>
